--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -14,6 +14,7 @@
     <div class="card-body">
       <h5 class="card-title">TinyURL for: <%= longURL %></h5>
       <p class="card-text">Short URL: <a href="/urls/<%= shortURL %>"><%= shortURL %></a></p>
+      <p class="card-text">Long URL: <a href="/urls/<%= longURL %>"><%= longURL %></a></p>
     </div>
     <div class="card-footer text-muted"></div>
   </div>
