--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -8,7 +8,8 @@
   <title>tinyApp : URLs</title>
 </head>
 
-<!-- <body>
+<body>
+  <!-- <body>
   <h3>My Urls</h3>
   <table>
     <thead>
@@ -25,32 +26,34 @@
     </tbody>
   </table> -->
 
-<!-- trying my own way above, below is supplied by LHL -->
+  <!-- trying my own way above, below is supplied by LHL -->
 
-<main style="margin: 1em;">
-  <h3>My URLs</h3>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Short URL</th>
-        <th scope="col">Long URL</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% for(let url in urls) { %>
-      <tr>
-        <td><%= url %></td>
-        <td><%= urls[url] %></td>
-      </tr>
-      <% } %>
-    </tbody>
-  </table>
-</main>
+  <%- include("./partials/_header.ejs") %>
 
-<!-- Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <main style="margin: 1em;">
+    <h3>My URLs</h3>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Short URL</th>
+          <th scope="col">Long URL</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% for(let url in urls) { %>
+        <tr>
+          <td><a href=<%= url %>><%= url %></a></td>
+          <td><a href="#"><%= urls[url] %></a></td>
+        </tr>
+        <% } %>
+      </tbody>
+    </table>
+  </main>
+
+  <!-- Bootstrap JS -->
+  <script src=" https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
