form to create new shortURL and details page, and a redirect to the longURL from a shortened version of the link using '.../u/:shortURL'

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -42,8 +42,8 @@
       <tbody>
         <% for(let url in urls) { %>
         <tr>
-          <td><a href=<%= url %>><%= url %></a></td>
-          <td><a href="#"><%= urls[url] %></a></td>
+          <td><a href="urls/<%= url %>""><%= url %></a></td>
+          <td><a href=" #"><%= urls[url] %></a></td>
         </tr>
         <% } %>
       </tbody>
