--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -20,7 +20,10 @@
     <form class="form-inline" action="/urls" method="POST">
       <div class="form-group mb-2">
         <label for="longURL">Enter a URL:</label>
-        <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
+        <input id="newURL" class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
+        <script type="text/javascript">
+          document.getElementById('newURL').value = 'http://';
+        </script>
         <button type="submit" class="btn btn-primary">Submit</button>
       </div>
     </form>
