--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -13,18 +13,22 @@
 
   <main style="margin: 1em;">
     <h3>My URLs</h3>
-    <table class="table">
+    <table class="table table-striped table-sm">
       <thead>
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
         <% for(let url in urls) { %>
         <tr>
-          <td><a href="urls/<%= url %>"><%= url %></a></td>
-          <td><a href="<%= urls[url] %>"><%= urls[url] %></a></td>
+          <td class="align-baseline"><a href="urls/<%= url %>"><%= url %></a></td>
+          <td class="align-baseline"><a href="<%= urls[url] %>"><%= urls[url] %></a></td>
+          <td class="align-baseline">
+            <form name="shortURL" method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-outline-danger btn-sm">DELETE</button></form>
+          </td>
         </tr>
         <% } %>
       </tbody>
