--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -20,7 +20,7 @@
     </div>
 
     <div class="card text-center">
-      <div class="card-header text-centerr">
+      <div class="card-header text-center">
         <form method="POST" action="/urls/<%= shortURL %>/edit" name="longURL" class="form-inline justify-content-center" width=100%>
           <h5 class="card-title">Edit URL</h5>
           <input id="newURL" class="form-control" type="text" name="longURL" placeholder="" style="width: 300px; margin: 1em">
