--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,5 +10,11 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <div class="text-right">
+      <form method="POST" action="/login" name="username" class="form-inline">
+        <input id="login" class="form-control" type="text" name="username" placeholder="username" style="width: 300px; margin: 1em">
+        <button type="submit" class="btn btn-primary">SIGN IN</button>
+      </form>
+    </div>
   </nav>
 </header>
