--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,10 +11,14 @@
       </div>
     </div>
     <div class="text-right">
+      <% if (username) {%>
+      <h2><%= username  %> </h2>
+      <% } else { %>
       <form method="POST" action="/login" name="username" class="form-inline">
         <input id="login" class="form-control" type="text" name="username" placeholder="username" style="width: 300px; margin: 1em">
         <button type="submit" class="btn btn-primary">SIGN IN</button>
       </form>
+      <% } %>
     </div>
   </nav>
 </header>
