--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,11 +12,15 @@
     </div>
     <div class="text-right">
       <% if (username) {%>
-      <h2><%= username  %> </h2>
+      <form method="POST" action="/logout" name="username" class="form-inline">
+        <span class="align-middle text-white">Logged in as <strong><%= username  %></strong>
+          <button type="submit" class="mx-3 btn btn-outline-light btn-sm">LOG OUT</button>
+        </span>
+      </form>
       <% } else { %>
       <form method="POST" action="/login" name="username" class="form-inline">
-        <input id="login" class="form-control" type="text" name="username" placeholder="username" style="width: 300px; margin: 1em">
-        <button type="submit" class="btn btn-primary">SIGN IN</button>
+        <span class="align-middle text-white"><input id="login" class="form-control form-control-sm" type="text" name="username" placeholder="username" style="width: 150px">
+          <button type="submit" class="mx-3 btn btn-primary btn-sm">SIGN IN</button></span>
       </form>
       <% } %>
     </div>
