layout and refactoring changes

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,23 +10,22 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <div class="text-right">
-      <% if (username) {%>
-      <span class="align-middle text-white">
-        <form method="POST" action="/logout" name="username" class="form-inline">
-          <span class="align-middle text-white">Logged in as <strong><%= username  %></strong>
-            <button type="submit" class="mx-3 btn btn-outline-light btn-sm">LOG OUT</button>
-        </form>
-      </span>
-      <% } else { %>
-      <span class="align-middle text-white">
-        <form method="POST" action="/login" name="username" class="form-inline">
-          <input id="login" class="form-control form-control-sm" type="text" name="username" placeholder="username" style="width: 150px">
-          <button type="submit" class="mx-3 btn btn-primary btn-sm">SIGN IN</button>
-      </span>
-      </form>
-      </span>
-      <% } %>
-    </div>
+
+    <% if (username) {%>
+
+    <form method="POST" action="/logout" name="username" class="form-inline align-middle">
+      <p style="margin: 0" class="navbar-text">Logged in as <strong> <%= username  %></strong></p>
+      <button type="submit" class="mx-3 btn btn-outline-light btn-sm">LOG OUT</button>
+    </form>
+
+    <% } else { %>
+
+    <form method="POST" action="/login" name="username" class="form-inline">
+      <input id="login" class="form-control form-control-sm" type="text" name="username" placeholder="username" style="width: 150px">
+      <button type="submit" class="mx-3 btn btn-primary btn-sm">SIGN IN</button>
+    </form>
+
+    <% } %>
+    <!-- </div> -->
   </nav>
 </header>
