--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,11 +18,18 @@
       <button type="submit" class="mx-3 btn btn-outline-light btn-sm">LOG OUT</button>
     </form>
 
+    <% } else if (email) {%>
+
+    <form method="POST" action="/logout" name="email" class="form-inline align-middle">
+      <p style="margin: 0" class="navbar-text">Logged in as <strong> <%= email  %></strong></p>
+      <button type="submit" class="mx-3 btn btn-outline-light btn-sm">LOG OUT</button>
+    </form>
+
     <% } else { %>
 
-    <form method="POST" action="/login" name="username" class="form-inline">
-      <input id="login" class="form-control form-control-sm" type="text" name="username" placeholder="username" style="width: 150px">
-      <button type="submit" class="mx-3 btn btn-primary btn-sm">SIGN IN</button>
+    <form method="POST" action="/login" name="email" class="form-inline">
+      <input id="login" class="form-control form-control-sm" type="text" name="email" placeholder="email" style="width: 150px">
+      <button type="submit" class="mx-3 btn btn-primary btn-sm">LOG IN</button>
     </form>
     <form method="GET" action="/register" name="registration" class="form-inline">
       <button type="submit" class="mx-2 btn btn-outline-light btn-sm">REGISTER</button>
