--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,7 +11,7 @@
 <body>
   <%- include("./partials/_header-reg.ejs") %>
 
-  <div style="padding-top: 50px; padding-left: 70px" class="container">
+  <div style="padding-top: 50px; margin-left: 80px" class="container">
 
     <table>
       <th>
@@ -20,7 +20,8 @@
       <tbody>
         <tr>
           <td class="align-middle" width=200px>
-            <form method="POST" action="/register" name="registration" class="form-inline">
+            <form method="POST" action="/register" name="register" class="form-inline">
+              <input id="username" class="form-control form-control-sm m-2" type="username" name="username" placeholder="username (optional)" style="width: 200px">
               <input id="email" class="form-control form-control-sm m-2" type="email" name="email" placeholder="your@email.com" style="width: 200px">
               <input id="password" class="form-control form-control-sm m-2" type="password" name="password" placeholder="password" style="width: 200px"><button type="submit" class="m-2 btn btn-primary btn-sm">REGISTER</button>
             </form>
