--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,7 +19,7 @@
 
         <% if (!newUserCheck) { %>
 
-        <h6 class="m-2" style="color: red"><strong>ERROR</strong> That username or email already exists.</h6>
+        <h6 class="m-2" style="color: red"><strong>ERROR -> </strong>That username or email already exists.</h6>
       </th>
       <tbody>
         <tr>
