--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -27,8 +27,7 @@
 
     <% } else { %>
 
-    <form method="POST" action="/login" name="email" class="form-inline">
-      <input id="login" class="form-control form-control-sm mx-2" type="text" name="email" placeholder="username or email" style="width: 150px">
+    <form method="GET" action="/login" name="login" class="form-inline">
       <button type="submit" class="mx-2 btn btn-primary btn-sm">LOG IN</button>
     </form>
     <form method="GET" action="/register" name="registration" class="form-inline">
