A user: can register, cannot register with an email address that has already been used, can log in with the correct email/password, sees the correct information in the header, cannot log in with the incorrect email/password, can log out.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
 
         <% if (!validationCheck) { %>
 
-        <h6 class="m-2" style="color: red"><strong>ERROR -> </strong>The username/email or password are invalid.</h6>
+        <h6 class="m-2" style="color: red"><strong>403 ERROR -> </strong>The username/email or password are invalid.</h6>
       </th>
       <tbody>
         <tr>
