--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -15,6 +15,13 @@
   <div class="card text-center">
     <div class="card-header"></div>
     <div class="card-body">
+
+
+      <% if (!userID) { %>
+      <h5>Please login or register.</h5>
+      <% } else { %>
+
+
       <h5 class="card-title">TinyURL for: <a href="<%= longURL %>"><%= longURL %></a></h5>
       <p class=" card-text">Short URL: <a href="/urls/<%= shortURL %>"><%= shortURL %></a></p>
     </div>
@@ -34,6 +41,7 @@
 
     <div class="card-footer text-muted"></div>
   </div>
+  <% } %>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
